[tool.poetry]
name = "python-example"
version = "1.0.0"
description = "Example python service"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
repository = "https://github.com/rob-blackbourn/python-example"
packages = [
    { include = "python_example" }
]

[tool.poetry.scripts]
python-example = "python_example.entrypoint.startup:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYaml = "^5.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
pytest = "^5.1"
pylint = "^2.3"
mypy = "^0.720.0"
rope = "^0.14.0"

[[tool.poetry.source]]
name = "gascode"
url = "https://www.jetblack.net/nexus/repository/pypi-group/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
